--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -103,10 +103,16 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Code\AssetManager.cpp" />
+    <ClCompile Include="Code\Scene.cpp" />
+    <ClCompile Include="Code\Scene0.cpp" />
+    <ClCompile Include="Code\SceneManager.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Code\AssetManager.h" />
+    <ClInclude Include="Code\Scene.h" />
+    <ClInclude Include="Code\Scene0.h" />
+    <ClInclude Include="Code\SceneManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
