--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="Code\Scene0.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Code\Scene1.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Code\AssetManager.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Code\Scene0.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Code\Scene1.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
