--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -106,6 +106,8 @@
     <ClCompile Include="Code\Scene.cpp" />
     <ClCompile Include="Code\Scene0.cpp" />
     <ClCompile Include="Code\Scene1.cpp" />
+    <ClCompile Include="Code\Scene2.cpp" />
+    <ClCompile Include="Code\Scene3.cpp" />
     <ClCompile Include="Code\SceneManager.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
@@ -114,6 +116,8 @@
     <ClInclude Include="Code\Scene.h" />
     <ClInclude Include="Code\Scene0.h" />
     <ClInclude Include="Code\Scene1.h" />
+    <ClInclude Include="Code\Scene2.h" />
+    <ClInclude Include="Code\Scene3.h" />
     <ClInclude Include="Code\SceneManager.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
