--- a/Game/Game.vcxproj
+++ b/Game/Game.vcxproj
@@ -112,6 +112,8 @@
     <ClCompile Include="Code\SceneManager.cpp" />
     <ClCompile Include="Code\Scenes\Scene4.cpp" />
     <ClCompile Include="Code\Scenes\Scene5.cpp" />
+    <ClCompile Include="Code\Scenes\Scene6.cpp" />
+    <ClCompile Include="Code\Scenes\Scene7.cpp" />
     <ClCompile Include="Main.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -125,6 +127,8 @@
     <ClInclude Include="Code\SceneManager.h" />
     <ClInclude Include="Code\Scenes\Scene4.h" />
     <ClInclude Include="Code\Scenes\Scene5.h" />
+    <ClInclude Include="Code\Scenes\Scene6.h" />
+    <ClInclude Include="Code\Scenes\Scene7.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
