--- a/Game/Game.vcxproj.filters
+++ b/Game/Game.vcxproj.filters
@@ -92,5 +92,21 @@
     <ClInclude Include="Code\Scenes\Scene7.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="Images\wand.png">
+      <Filter>Resource Files</Filter>
+    </Image>
+    <Image Include="Images\wand.ico">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="WandTutorial.rc">
+      <Filter>Resource Files</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
